--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/dksiicemx/image/upload/v1736782868/sniffer_g67fzy.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Git Sniffer</title>
   </head>
